CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_disqln_hist__x/sfrosit_t_indiv_disqln_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_indiv_disqln_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_indiv_disqln_hist</externalName>
    <label>Individual Disqualification History</label>
    <pluralLabel>Individual Disqualification History</pluralLabel>
</CustomObject>