CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_disqln_hist__x/fields/cde_decn_ipv__c.field-meta.xml
<CustomField>
    <fullName>cde_decn_ipv__c</fullName>
    <description>cde_decn_ipv</description>
    <externalDeveloperName>cde_decn_ipv</externalDeveloperName>
    <label>IPV Decision Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>