CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_disqln_hist__x/fields/cde_type_assign__c.field-meta.xml
<CustomField>
    <fullName>cde_type_assign__c</fullName>
    <description>cde_type_assign</description>
    <externalDeveloperName>cde_type_assign</externalDeveloperName>
    <label>Assignment Type Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>