CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_disqln_hist__x/fields/idn_appeal__c.field-meta.xml
<CustomField>
    <fullName>idn_appeal__c</fullName>
    <description>idn_appeal</description>
    <externalDeveloperName>idn_appeal</externalDeveloperName>
    <label>Appeal ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>