CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_disqln_hist__x/fields/idn_prim__c.field-meta.xml
<CustomField>
    <fullName>idn_prim__c</fullName>
    <description>idn_prim</description>
    <externalDeveloperName>idn_prim</externalDeveloperName>
    <label>PRIM ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>