CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_disqln_hist__x/fields/idn_prim_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_prim_hist__c</fullName>
    <description>idn_prim_hist</description>
    <externalDeveloperName>idn_prim_hist</externalDeveloperName>
    <label>PRIM Hist ID</label>
    <length>50</length>
    <referenceTargetField>T_INDIV_DISQLN__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_INDIV_DISQLN__c</referenceTo>
    <relationshipLabel>Individual Disqualification Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_indiv_disqln_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>