CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_disqln_hist__x/fields/txt_reason_ipv_alleged__c.field-meta.xml
<CustomField>
    <fullName>txt_reason_ipv_alleged__c</fullName>
    <description>txt_reason_ipv_alleged</description>
    <externalDeveloperName>txt_reason_ipv_alleged</externalDeveloperName>
    <label>IPV Alleged Reason</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>